# igamma

./: .equations.org  Makefile.am  README.md  README.org  bootstrap.mk  configure.ac
include/rad/igamma/: igamma.h
julia/igamma/: Igamma.jl
julia/tests/: test_igamma.jl
src/: cincgam.f90
src/rad/igamma/: cincgam.f90  cincgam_quad.f90  igamma.cc  igamma.i
src/tests/: test_igamma.cc
